Modificando html y ssh según video 15/43

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El titulo del post</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>El titulo del post</title>
+    </head>
     <link rel="stylesheet" href="css/estilos.css">
-<body>
-    <h1>
-        Ejemplo de HTML en Visual Studio.
-    </h1>
-    <h2>
-        1er párrafo de prueba.
-    </h2>
-</body>
+    <body>
+        <div id="container">      
+            <div id="post">
+                <h1>
+                    Título de ejemplo para el blog en la sección de "post".
+                </h1>
+                <p>
+                    Párrafo de ejemplo para la descripción del blog.
+                </p>
+            <div>
+        </div>
+    </body>
 </html>
