6to commit. Finalización de la cabecera azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,12 @@
     </head>
     <link rel="stylesheet" href="css/estilos.css">
     <body>
-        <div id="container">      
+        <div id="container">    
+            <div id="cabecera">
+                Hyperblog
+                <span id="tagline">Tu blog de confianza.
+                </span>
+            </div>  
             <div id="post">
                 <h1>
                     Título de ejemplo para el blog en la sección de "post".
