--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,9 @@
                 <p>
                     Párrafo de ejemplo para la descripción del blog.
                 </p>
+                <p>
+                    Descripcion más ampliada sobre el tema a tratar en el sitio.
+                </p>
             <div>
         </div>
     </body>
