--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,7 @@
                     Párrafo de ejemplo para la descripción del blog.
                 </p>
                 <p>
-                    Descripcion más ampliada sobre los temas a tratar en el sitio.
+                    Cambio del segundo párrafo para prueba de merge.
                 </p>
             <div>
         </div>
