Cambio en rama master para segundo intendo de merge

--- a/blogpost.html
+++ b/blogpost.html
@@ -21,7 +21,7 @@
                     Párrafo de ejemplo para la descripción del blog.
                 </p>
                 <p>
-                    Cambio del segundo párrafo para prueba de merge.
+                    Tercer cambio para merge 13/3/24
                 </p>
             <div>
         </div>
