--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
         <div id="container">    
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza.
+                <span id="tagline">Tu blog maestro.
                 </span>
             </div>  
             <div id="post">
@@ -25,6 +25,9 @@
                 </p>
                 <p>
                     Cambio extra 13/03
+                </p>
+                <p>
+                    Prueba de kana/仮名のテスト
                 </p>
             <div>
         </div>
