--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/estilos.css">
     <body>
         <div id="container">    
-            <div id="cabecera">
+            <div id="header">
                 Hyperblog
                 <span id="tagline">Tu blog de cabecera.
                 </span>
