Agregando descripción y color en footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -30,6 +30,11 @@
                     Prueba de kana/仮名のテスト
                 </p>
             <div>
+            <div id="footer">
+                <p>
+                    Todos los derechos reservados®
+                </p>
+            </div>
         </div>
     </body>
 </html>
